--- a/assets/style.css
+++ b/assets/style.css
@@ -7,14 +7,36 @@ body {
     Geneva, Verdana, sans-serif;
 }
 
-.styledimg {
-    background-image: url(/assets/images/image-product-desktop.jpg);
-    background-repeat: no-repeat;
-    width: 900px;
-    height: 600px;
-    }
+p {
+    width: 300px;
+}
 
-.colonge1 {
+/* Grid Wrapper */
+.wrapper {
+    display: grid;
+    grid-template-columns: 
+    1fr 1fr;
+    grid-auto-rows: minmax(300px, auto);
+    gap: 40px;
+
+}
+/* Grid Wrapper */
+
+/* Grid Boxes */
+/* Image */
+.box1 {
+    background-image: url(/assets/images/mercedes-benz-man-intense.jpg);
+    background-repeat: no-repeat;
+    width: 500px;
+    height: 600px;
+    grid-column: 1 / 1;
+    }
+/* Image */
+
+.box2 {
+    grid-column: 2 / 2;
     font-size: 20px;
     color: darkslategrey;
 }
+/* Grid Boxes */
+
